# agentsmd-rl

./: .gitignore  0401_overnight_working.md  CLAUDE.md  README.md  VALIDATION_STATUS.md  filtered_prs_new.jsonl  pyproject.toml  scouted_agentmd_prs.jsonl  scouted_agentmd_prs_all.jsonl  scouted_agentmd_prs_deep.jsonl  scouted_agentmd_prs_deep_filtered.jsonl  scouted_agentmd_prs_wave2.jsonl  scouted_prs.jsonl  scouted_prs_diverse.jsonl  scouted_prs_new.jsonl  scouted_repos.jsonl  scouted_repos_agentmd_extra.jsonl  scouted_repos_deep.jsonl  scouted_repos_pipeline.jsonl  scouted_scaleup_v2_prejudged.decisions.csv  task_metadata.jsonl  validation_results.csv
claude-code-rl-w-tinker/: README.md  RUN_003_ANALYSIS.md  anthropic_proxy.py  test_e2e.py  test_e2e_extended.py  test_harbor_trial.py  test_logprob_fidelity.py  test_multi_turn_models.py  test_unit.py  train.py
harbor_tasks_quarantine/: INDEX.txt  MANIFEST.json  README.md
markdown_edits/: COLLECTION_STATUS.md
research/: 0408_plan.md  04_05_overnight_glm_scaffold.md  README.md  agent-manifest-confounding.md  benchmark_construction_log.md  data_mining_pipeline.md  e2b_validation_plan.md  grading-schema-comparison.md  md_authoring_quality_judgments.json  mvp-roadmap.md  negative_rubrics_plan.md  pipeline-v2-plan.md  reward-tampering-in-scaffold-agents.md  rubric-audit-findings.md  rubric-reward-postmortem.md  scaffold-gates-design.md  scouted_round2_v2_prejudged.decisions.csv  scouting_report_2026_04_26.md  test-design-audit.md  test_coverage_audit.md  towards-better-tests.md  trajectory-logging-design.md
(+42049 files in other folders)
